fix css layout issue

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,11 @@ body {
     height: 100%;
     padding: 15px;
 }
+#app,
+.container {
+    width: 100%;
+    height: 100%;
+}
 
 .dv {
     height: 100%;
